--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 
-server.port=3000
-
-
-logging.level.org.springframework.web: trace
-logging.level.org.apache: trace
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=false
+spring.freemarker.cache=false
+spring.jackson.serialization.fail-on-empty-beans=false
