--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=false
 spring.freemarker.cache=false
 spring.jackson.serialization.fail-on-empty-beans=false
+
+spring.profiles.active=local
+spring.redis.port=6379
+
+spring.config.use-legacy-processing=true
