FEAT : Socket 채팅 JWT, Spring Security 연동

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     //embedded-redis
     implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'
+
+    // spring security + JWT
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 tasks.named('test') {
